# SmartTools

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
src/gui_client/: app.py  claude_client.py
src/mcp_server/: analyst.py  market_data.py  mcp_logger.py  schema.py  server.py
tests/: test_analyst.py  test_mcp_logger.py  test_schema.py
